--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "basic-auth": "^1.1.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongodb": "^2.2.26"
+    "mongodb": "^2.2.26",
+    "morgan": "^1.8.2"
   }
 }
