--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "winston": "^2.3.1"
   }
 }
